--- a/proyectoParejas/nbproject/project.properties
+++ b/proyectoParejas/nbproject/project.properties
@@ -27,9 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/proyectoParejas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Users\\Jos\u00e9Fabi\u00e1n\\Desktop\\mysql-connector-java-5.0.8-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=proyectoparejas.ProyectoParejas
+main.class=vista.PrincipalVentana
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
