--- a/proyectoParejas/nbproject/project.properties
+++ b/proyectoParejas/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/proyectoParejas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Users\\Jos\u00e9Fabi\u00e1n\\Desktop\\mysql-connector-java-5.0.8-bin.jar
+file.reference.mysql-connector-java-5.0.8-bin.jar-1=C:\\Users\\Andrey\\Downloads\\mysql-connector-java-5.0.8-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
